<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".activities.CafeteriaViewActivity">

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="visible" />

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:orientation="vertical"
        android:padding="5dp"
        android:visibility="gone">

        <Button
            android:id="@+id/add_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:fontFamily="@font/niramit_regular"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/add_product"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/product_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/niramit_regular"
                android:paddingLeft="5dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/product"
                android:textAlignment="viewStart"
                android:textColor="@color/grey"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/quantity_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".3"
                android:fontFamily="@font/niramit_regular"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/quantity"
                android:textAlignment="center"
                android:textColor="@color/grey"
                android:textSize="14sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".3" />
        </LinearLayout>

        <ListView
            android:id="@+id/my_order_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

        </ListView>

        <Button
            android:id="@+id/next_step"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:fontFamily="@font/niramit_regular"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/next"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>