<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activities.EventConfirmActivity">

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:orientation="vertical"
        android:padding="15dp"
        android:visibility="visible">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:animationCache="false"
            android:gravity="top|center_horizontal"
            android:orientation="vertical"
            android:showDividers="none">

            <com.google.android.material.card.MaterialCardView
                style="@style/Widget.MaterialComponents.CardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="5dp"
                app:cardElevation="5dp"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true"
                app:contentPadding="0dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:background="@color/colorPrimary"
                    android:fontFamily="@font/niramit_bold"
                    android:lines="1"
                    android:paddingBottom="5dp"
                    android:shadowColor="@color/colorPrimary"
                    android:text="@string/event"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|center"
                    android:layout_marginTop="35dp"
                    android:measureWithLargestChild="true"
                    android:padding="15dp">

                    <TableRow
                        android:layout_marginTop="3dp"
                        android:layout_marginBottom="3dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical">

                        <TextView
                            android:id="@+id/event_name_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/niramit_regular"
                            android:paddingRight="10dp"
                            android:text="@string/name_label"
                            android:textAlignment="viewEnd"
                            android:textColor="@color/colorPrimary"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/event_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_light"
                            android:textColor="@color/grey"
                            android:textSize="15sp" />
                    </TableRow>

                    <TableRow
                        android:layout_marginTop="3dp"
                        android:layout_marginBottom="3dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical">

                        <TextView
                            android:id="@+id/event_date_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/niramit_regular"
                            android:paddingRight="10dp"
                            android:text="@string/date_label"
                            android:textAlignment="viewEnd"
                            android:textColor="@color/colorPrimary"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/event_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_light"
                            android:textColor="@color/grey"
                            android:textSize="15sp" />
                    </TableRow>

                    <TableRow
                        android:layout_marginTop="3dp"
                        android:layout_marginBottom="3dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical">

                        <TextView
                            android:id="@+id/event_price_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/niramit_regular"
                            android:paddingRight="10dp"
                            android:text="@string/price_label"
                            android:textAlignment="viewEnd"
                            android:textColor="@color/colorPrimary"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/event_price"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_light"
                            android:textColor="@color/grey"
                            android:textSize="15sp" />
                    </TableRow>

                    <TableRow
                        android:layout_width="186dp"
                        android:layout_marginTop="3dp"
                        android:layout_marginBottom="3dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical">

                        <TextView
                            android:id="@+id/event_tickets_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/niramit_regular"
                            android:gravity="center_vertical"
                            android:paddingRight="10dp"
                            android:text="@string/tickets_label"
                            android:textAlignment="viewEnd"
                            android:textColor="@color/colorPrimary"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/event_tickets"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_light"
                            android:textColor="@color/grey"
                            android:textSize="15sp" />
                    </TableRow>

                </TableLayout>

            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:animationCache="false"
            android:gravity="top|center_horizontal"
            android:orientation="vertical"
            android:showDividers="none">

            <com.google.android.material.card.MaterialCardView
                style="@style/Widget.MaterialComponents.CardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="5dp"
                app:cardElevation="5dp"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true"
                app:contentPadding="0dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:background="@color/colorPrimary"
                    android:fontFamily="@font/niramit_bold"
                    android:lines="1"
                    android:paddingBottom="5dp"
                    android:shadowColor="@color/colorPrimary"
                    android:text="@string/payment"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|center"
                    android:layout_marginTop="35dp"
                    android:measureWithLargestChild="true"
                    android:padding="15dp">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="3dp"
                        android:layout_marginBottom="3dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical">

                        <TextView
                            android:id="@+id/nif_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/niramit_regular"
                            android:paddingRight="10dp"
                            android:text="@string/nif_label"
                            android:textAlignment="viewEnd"
                            android:textColor="@color/colorPrimary"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/nif_info"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_light"
                            android:textColor="@color/grey"
                            android:textSize="15sp" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="3dp"
                        android:layout_marginBottom="3dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical">

                        <TextView
                            android:id="@+id/card_type_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/niramit_regular"
                            android:paddingRight="10dp"
                            android:text="@string/card_type"
                            android:textAlignment="viewEnd"
                            android:textColor="@color/colorPrimary"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/card_type_info"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_light"
                            android:textColor="@color/grey"
                            android:textSize="15sp" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="3dp"
                        android:layout_marginBottom="3dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical">

                        <TextView
                            android:id="@+id/card_number_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/niramit_regular"
                            android:paddingRight="10dp"
                            android:text="@string/card_number"
                            android:textAlignment="viewEnd"
                            android:textColor="@color/colorPrimary"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/card_number_info"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_light"
                            android:textColor="@color/grey"
                            android:textSize="15sp" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="3dp"
                        android:layout_marginBottom="3dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical">

                        <TextView
                            android:id="@+id/card_validity_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/niramit_regular"
                            android:gravity="center_vertical"
                            android:paddingRight="10dp"
                            android:text="@string/card_exp"
                            android:textAlignment="viewEnd"
                            android:textColor="@color/colorPrimary"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/card_validity_info"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_light"
                            android:textColor="@color/grey"
                            android:textSize="15sp" />
                    </TableRow>
                </TableLayout>

            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>

        <ProgressBar
            android:id="@+id/loading"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />

        <Button
            android:id="@+id/confirm_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_weight="0"
            android:background="@color/colorAccent"
            android:fontFamily="@font/niramit_regular"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/confirm"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>